# steering-deep-research

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml  react_agent.md
deep-research-mini/: .gitignore  debug_agent_sig.py  debug_load_graphs.py  langgraph.json  pyproject.toml
deep-research-mini/src/: models.py  utils.py
deep-research-mini/src/agent/: research.py
deep-research-mini/src/agents/: clarifier.py  draw_graph.py  planner.py  research.py  run_agent.py  supervisor.py  workflow.py
deep-research-mini/src/prompts/templates/: clarifier.jinja-md  planner.jinja-md  planner_loop.jinja-md  reporter.jinja-md  researcher.jinja-md  supervisor.jinja-md
deep-research-mini/src/tools/: __init__.py  web_crawl.py  web_search.py
web/backend/: main.py  requirements.txt
web/frontend/: package-lock.json  package.json  tailwind.config.js
web/frontend/src/: App.js  index.css
