[project]
name = "deep-research-mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firecrawl-py>=4.13.4",
    "jinja2>=3.1.6",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.7",
    "langgraph-cli[inmem]>=0.4.12",
    "langgraph-supervisor>=0.0.31",
    "socksio>=1.0.0",
]
